# aphanite

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  deno.json  deno.jsonc  oxfmt.config.ts  oxlint.config.ts  package.json
.github/: copilot-instructions.md
.github/workflows/: frontend.yml  rust.yml
.zed/: settings.json
doc/: Aphanite General.md  Yggdrasil.md
migrations/: README.md
migrations/postgres/: 0001-init.sql  0002-add-totp-fields.sql  0003-add-register-tokens.sql  0004-remove-otp-active.sql
migrations/sqlite/: 0001-init.sql  0002-add-totp-fields.sql  0003-add-register-tokens.sql  0004-remove-otp-active.sql
scripts/: README.md  build.ts  common.ts  dev.ts
src/: cli.rs  config.rs  data.rs  kv_cache.rs  lib.rs  main.rs  storage.rs  types.rs  utils.rs
src/assets/: config.example.toml
src/data/: migrations.rs
src/service/: api.rs  frontend.rs  mod.rs  types.rs  validation.rs
src/service/phenocryst/: mod.rs  totp.rs
src/service/yggdrasil/: api.rs  mod.rs  types.rs
src/yggdrasil/: api.rs
tests/: general_api.rs  totp_api.rs  yggdrasil_api.rs
tests/common/: mod.rs
web/: README.md  index.html  login.html  package.json  svelte.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.svelte  app.css  login-main.ts  login.css
web/src/components/: AuthImage.svelte  DarkModeButton.svelte  HomePageRouter.svelte  HomePageSideBar.svelte  LoginPageRouter.svelte  MinecraftAvatar.svelte  Toast.svelte  TopBar.svelte  home_page_router.svelte.ts  toast.svelte.ts
web/src/lib/: AuthImage.svelte  Sidebar.svelte  Space.svelte  Toast.svelte  api.ts  auth.svelte.ts  darkmode.ts  home-page-router.ts  sidebar.svelte.ts  toast.svelte.ts  utils.ts
web/src/pages/: Dashboard.svelte  Home.svelte  Login.svelte  PlayerProfiles.svelte  Profile.svelte  Profiles.svelte  Register.svelte  Users.svelte
