[package]
name = "aphanite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
axum = { version = "0.8.9", features = ["macros", "multipart"] }
base64 = "0.22.1"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
dashmap = "6.2.1"
image = "0.25.10"
infer = "0.19.0"
jiff = "0.2.31"
rand = "0.10.2"
rsa = { version = "0.10.0-rc.18", features = ["serde", "sha1"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
shadow-rs = "2.0.0"
toasty = { version = "0.7.0", features = ["sqlite", "jiff", "serde"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["serde", "v7"] }
