[package]
name = "aphanite"
version = "0.1.0"
edition = "2024"
build = "./build/build.rs"

[dependencies]
anyhow = "1.0.103"
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
axum = { version = "0.8.9", features = ["macros", "multipart"] }
axum-client-ip = { version = "1.3.1", features = ["forwarded-header"] }
axum-reverse-proxy = { version = "1.3.0", default-features = false }
base64 = "0.22.1"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
infer = "0.19.0"
jiff = "0.2.31"
rand = "0.10.2"
reqwest = { version = "0.12.15", features = ["json"] }
rsa = { version = "0.10.0-rc.18", features = ["serde", "sha1"] }
rusqlite = "0.39.0"
rust-embed = { version = "8.12.0", features = ["mime-guess"] }
rust-s3 = "0.37.2"
scc = "3.8.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
shadow-rs = "2.0.0"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
toasty = { version = "0.8.0", features = ["sqlite", "jiff", "serde", "postgresql"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-cron-scheduler = "0.15.1"
tokio-postgres = "0.7.18"
tokio-stream = { version = "0.1.18", features = ["full"] }
tokio-util = "0.7.18"
toml = "1.1.2"
totp-rs = { version = "5.7.2", features = ["gen_secret", "otpauth"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["serde", "v7"] }

[build-dependencies]
anyhow = "1.0.103"

[dev-dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
tempfile = "3"
toasty = { version = "0.8.0", features = ["sqlite", "jiff"] }
totp-rs = { version = "5.7.2", features = ["gen_secret", "otpauth"] }
